Change naming + export view + Unit tests

--- a/src/Dependencies.Exchange.Graph/Views/GraphSettingsView.xaml
+++ b/src/Dependencies.Exchange.Graph/Views/GraphSettingsView.xaml
@@ -1,10 +1,8 @@
 ﻿<UserControl x:Class="Dependencies.Exchange.Graph.Views.GraphSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <GroupBox Header="Graph Settings">
-        <DockPanel Margin="10">
-            <TextBlock Text="Uri: " VerticalAlignment="Center"/>
-            <TextBox Text="{Binding Uri}" />
-        </DockPanel>
-    </GroupBox>
+    <DockPanel Margin="10">
+        <TextBlock Text="Uri: " VerticalAlignment="Center" Margin="10 0 0 0"/>
+        <TextBox Text="{Binding Uri}" Margin="10" />
+    </DockPanel>
 </UserControl>
