--- a/src/Dependencies.Exchange.Graph/Views/OpenAssemblyView.xaml
+++ b/src/Dependencies.Exchange.Graph/Views/OpenAssemblyView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="Dependencies.Exchange.Graph.Views.OpenAssemblyView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Name="openAssemblyWindows">
+             Width="600" Height="300">
     <Grid FocusManager.FocusedElement="{Binding ElementName=searchTextControl}" Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
